@@ -6,21 +6,19 @@ DIST linux-2.6.27.7.tar.bz2 50365805 RMD160 a2ff56028e35740211817ddb493e6748f152
 DIST linux-2.6.32.23.tar.bz2 64429572 RMD160 500cf101e64e41c5e4e7294565d55ad6e6514c3f SHA1 80f6b73b33f2989ec7451ed0ca33f213ace24be3 SHA256 d99e04971ae6412ffceae7b6fe980efee60fd80ad504c7e50f629bd673631d76
 DIST linux-2.6.35.2.tar.bz2 69259259 RMD160 686b3c6408de362161954c6e9e6c0ea093195892 SHA1 c5f1139bbbdc339668ee2ff22632f1d1c7539a96 SHA256 36cfb44b8756b7543c8ba6c7404723b8d8184c23a7303979d8441c1251996bb3
 DIST linux-2.6.35.7.tar.bz2 69255636 RMD160 516070fd630273757c61e558db61c7fef20ddd4e SHA1 1c3b0da36fbc54932710a74f0d64a279c279935a SHA256 f19c830e52d97fe35e9e32e1911de238e75b1cd29ca779de0d83f0906073ee2c
-DIST linux-2.6.36.tar.bz2 70277083 RMD160 d739da505a79e71a1370d36e1373b36be055c123 SHA1 b546ab66458d7d614151d80adbc03b4d28977ae2 SHA256 15a076d1a435a6bf8e92834eba4b390b4ec094ce06d47f89d071ca9e5788ce04
 DIST linux-3.1.tar.bz2 77190238 RMD160 f9a3ce57b9f20a1402ef340792d3c223140ce1d2 SHA1 ac792701561b1cd4279302b8bb8f474731762ad1 SHA256 2573d2378c754b0c602b57586e9311e5b38c5d1e6c137f02873833633a4b9359
 EBUILD linux-docs-2.6.16.ebuild 1460 RMD160 c862a9f8622aded535abcd7ea3972ec2ee16a6fe SHA1 fa3e3218e231493e596c6b8f0033bb4d5b5368ff SHA256 055cbe77ac4c3231877dc5b7fe0dc01b811e468d6d377fef404bc037c7027282
 EBUILD linux-docs-2.6.27.7.ebuild 1472 RMD160 d9b46a505de02b9441362c9e09b58d22e1226a1a SHA1 a88ef6d9a8aaeb244fdbbc01a033c675636c99a8 SHA256 67e7e14cbb386cface5016094e452282ecc44cd76d3587a63497ac97f75a43d4
 EBUILD linux-docs-2.6.32.23.ebuild 1473 RMD160 7896611a2509e0cd9117654706cf14dbf7577b12 SHA1 69ffd18147bf5d0530231c38e3f0f7a740d86348 SHA256 27175ac867b5a8f7b1104145841c08179d93d6dd0a793465cf900d49042a058f
 EBUILD linux-docs-2.6.35.2.ebuild 1472 RMD160 a37318cbc82dbc9b0a0ad82c7add3d1c84a7a5b1 SHA1 c876a2dca47f09d921745760fbd8166673637963 SHA256 6b3a222a120840addcff8323a3e7a0e08098df0ee8a4dd9157c7afeff2496e19
 EBUILD linux-docs-2.6.35.7.ebuild 1472 RMD160 8755aa75e151f52f8a2fc475f453b84de9858bbb SHA1 17b49d83aece3a532c63ca0a4faac871953415a2 SHA256 945d65ce5257dcce1a024376b39ae0d5c33690862c2673d442c79626a7070b7b
-EBUILD linux-docs-2.6.36.ebuild 1470 RMD160 8e87b95a1936af04e5a9ba880d5c11ca7775ec4b SHA1 9b36f96c2f3d1944454d7271d8a921a9405ec98b SHA256 ca8ed96373202a7ce951830298c3b2a84d6321674fa997d1676923d9cde4ad49
-EBUILD linux-docs-3.1.ebuild 1467 RMD160 c10bc1d617ecb246ebb2d83f970dfd7656b22d53 SHA1 1cff2bb5c818d6ea54efd53c70b5fc2d1293ca11 SHA256 a7137d1eb14aad1eb0d76b92c488abc8648e231066f6cf2a9198cbafa7e54405
-MISC ChangeLog 4531 RMD160 67c8b9c2e9fc1e184a297403905e148536c30669 SHA1 f5935eb03abf82119ed75da51c1427c155684b44 SHA256 e64f4adc393d6f4a2a0c660c8fde5bd30dc1b3abe52465e2385d6d39dbb21d5c
+EBUILD linux-docs-3.1.ebuild 1467 RMD160 425979f549557e4092224369524b43d237b5b6be SHA1 b52f649c9cd1e0daf6b7926714ad87c944a5c2c7 SHA256 ee8d613cd19ab52f22e3979e7fd7c7495f205b79c5721d767ce9b720cc88a507
+MISC ChangeLog 4662 RMD160 283641804db60eac5a1f7575e0a32733e047572a SHA1 f07e524f5a60560883f4ecd77c5db7e7fa01db4e SHA256 63d6455281f8244261d7b1564a45dfb0ba931e08148b72b7cb6b978f45407cb1
 MISC metadata.xml 299 RMD160 dc600bbbb0e020ffd59c05c3db5af421c14fbadf SHA1 93999ab1c937b64ed6a7f220f5814db7eaa342fc SHA256 736556faadf70505403eaa445a43a5a8bf3d0b58d390d289f7bc3c4cf50abb09
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk6qol4ACgkQPDPGULV25OOx2wCgq84TBX6AcCCbxqoSCE2Sial1
-G+8An2X80/KoZrR+14s/8kbOyezFhB8U
-=St5v
+iEYEAREIAAYFAk7NmC4ACgkQPDPGULV25OO8gQCgmBMmFF2HqYC81fjLkGCnvd/5
+VhIAoNcWlLAAvyuTQKgdMEltXS29kSPy
+=p5uA
 -----END PGP SIGNATURE-----
